2002-01-28  Duarte Loreto <happyguy_pt@hotmail.com>

        * mime-edit-dialog.c: Fixed a i18n glitch (missing space between two words)

2002-01-28  Bradford Hovinen  <hovinen@ximian.com>

	* service-edit-dialog.c (populate_app_list): Set custom program
	entry and needs terminal here

	* service-info.c (service_info_using_custom_app): Implement

	* service-edit-dialog.c (populate_app_list): Add destroy notify
	for app

	* service-info.[ch]: Eliminate custom_line and needs_terminal; use
	app for that

	* mime-edit-dialog.c (populate_application_list): Use
	gnome_vfs_application_registry_get_applications

	* mime-type-info.c (mime_type_info_using_custom_app) 
	(mime_category_info_using_custom_app): Implement

	* mime-edit-dialog.c (store_data): Update: don't use custom_line,
	needs_terminal

	* mime-type-info.[ch]: Eliminate custom_line and needs_terminal;
	will use default_action for that now

	* mime-category-edit-dialog.c (store_data): Set fields in
	default_action from custom_line

	* mime-type-info.c (mime_category_info_save): Don't set tmp1 with
	the full category name, free tmp too
	(mime_category_info_load_all): strdup app->command
	(get_gconf_base_name): Don't put /default-action-id after the key
	name
	(mime_category_info_load_all): Set default_action even if the app
	is custom

	* category-names.h: Update category names

	* mime-type-info.c (update_subcategories): Fix logic
	(mime_type_info_load_all): Don't load default_action if
	custom_line is set

	* mime-category-edit-dialog.c (store_data): Call
	mime_category_info_update
	(store_data): Don't notify the model -- nothing there could have
	changed

	* mime-type-info.c (mime_category_info_update): Implement
	(update_subcategories): Update; split from set_subcategory_ids

	* mime-category-edit-dialog.c (populate_application_list): Notify
	destruction with gnome_vfs_mime_application_free
	(store_data): Store default action
	(store_data): Store custom line, needs terminal