@@ -1,3 +1,8 @@
+2002-01-29  Bradford Hovinen  <hovinen@ximian.com>
+
+	* file-types-capplet.c (create_dialog): Pack the icon and
+	description in the same column
+
 2002-01-28  Duarte Loreto <happyguy_pt@hotmail.com>
 
         * mime-edit-dialog.c: Fixed a i18n glitch (missing space between two words)
